# MARV-gs

./: .coverage  .gitignore  API.md  CHECKPOINTS.md  README.md  build.py  main.py  pyproject.toml
src/backend/: app.py  serial_manager.py
src/frontend/: README.md  index.html
src/frontend/MARV-gui/: index.html  vite.config.ts
src/frontend/MARV-gui/src/components/: ControlPanel.tsx
src/frontend/MARV-gui/src/hooks/: useTelemetryWebSocket.ts
src/frontend/gui/: index.html
src/frontend/gui/assets/: index-BrZW7462.css  index-D_6EI1hE.js
src/frontend/test-ui/: index.html
src/frontend/test-ui/app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/frontend/test-ui/app/src/: App.tsx  styles.css
src/ui/: README.md  server_ui.py
tests/: test_backend_app.py  test_serial_manager.py  test_static_mount.py
